# archetype-data-migration

./: .env.example  .gitattributes  .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
commands/: __init__.py  audit_legacy_migration.py  legacy_migration_procedure.py  migrate_legacy_data.py  recreate_disposable_target.py
docs/: STATE.md  STATUS.md  database-map.md  legacy-migration-audit.md  legacy-migration-plan.md  local-smoke-test.md  operator-guide.md
docs/db-migration/: CSV—Recent_INSERT-backfill.csv  CSV—full_list_of_migrations-mappings_completed.csv  README.md
manifests/: legacy-migration-manifest-template.json
mappings/: README.md
migration_toolkit/: __init__.py  audit.py  disposable_target.py  importer.py  procedure.py
scripts/: backend-compose-run.sh  create-target-smoke-db.sh  verify-import.sh
tei_exporter/: MAPPINGS.md  README.txt  export_tei.py  tei_templates.xslt
tei_exporter/tei_exports/: 1.xml  10.xml  100.xml  1000.xml  1004.xml  102.xml  105.xml  106.xml  108.xml  11.xml  110.xml  112.xml  114.xml  116.xml  119.xml  120.xml  122.xml  124.xml  126.xml  128.xml  13.xml  130.xml  132.xml  135.xml  136.xml  138.xml  140.xml  142.xml  145.xml  146.xml  148.xml  15.xml  150.xml  152.xml  156.xml  159.xml  160.xml  162.xml  164.xml  166.xml  (+1343 more)
tests/: test_audit.py  test_disposable_target.py  test_importer.py  test_procedure.py
visuals/flow/: README.md  new-db-annotations.mmd  new-db-auth-django.mmd  new-db-common.mmd  new-db-manuscripts.mmd  new-db-publications.mmd  new-db-scribes.mmd  new-db-symbols.mmd
(+73 files in other folders)
